@@ -394,37 +394,41 @@ class StdQC(StdService):
 class StdArchive(StdService):
     """Service that archives LOOP and archive data in the SQL databases."""
     
-    # This service manages an "accumulator", which records high/lows and averages
-    # of LOOP packets over an archive period. At the end of the archive period
-    # it then emits an archive record.
+    # This service manages an "accumulator", which records high/lows and
+    # averages of LOOP packets over an archive period. At the end of the
+    # archive period it then emits an archive record.
     
     def __init__(self, engine, config_dict):
         super(StdArchive, self).__init__(engine, config_dict)
-        
-        # Get the archive interval from the configuration file
-        software_archive_interval = config_dict['StdArchive'].as_int('archive_interval')
 
-        # If the station supports a hardware archive interval use that instead, but
-        # warn if they mismatch:
-        try:
-            if software_archive_interval != self.engine.console.archive_interval:
-                syslog.syslog(syslog.LOG_ERR, "wxengine: The archive interval in the configuration file (%d)"\
-                              " does not match the station hardware interval (%d)." % \
-                              (software_archive_interval, self.engine.console.archive_interval))
-            self.archive_interval = self.engine.console.archive_interval
-            syslog.syslog(syslog.LOG_INFO, "wxengine: Using station hardware archive interval of %d" % self.archive_interval)
-        except NotImplementedError:
-            self.archive_interval = software_archive_interval
-            syslog.syslog(syslog.LOG_INFO, "wxengine: Using config file archive interval of %d" % self.archive_interval)
-
-        self.archive_delay    = config_dict['StdArchive'].as_int('archive_delay')
-        if self.archive_delay <= 0:
-            raise weewx.ViolatedPrecondition("Archive delay (%.1f) must be greater than zero." % (self.archive_delay,))
-        
+        # See how we are supposed to generate archive records
         self.record_generation = config_dict['StdArchive'].get('record_generation', 'hardware').lower()
         syslog.syslog(syslog.LOG_INFO, "wxengine: Record generation will be attempted in '%s'" % (self.record_generation,))
 
-        # Get whether to use LOOP data in the high/low statistics (or just archive data):
+        # Get the archive interval from the configuration file
+        software_archive_interval = config_dict['StdArchive'].as_int('archive_interval')
+
+        if self.record_generation == 'hardware':
+            # If the station supports a hardware archive interval use that
+            # instead, but warn if they mismatch.
+            try:
+                if software_archive_interval != self.engine.console.archive_interval:
+                    syslog.syslog(syslog.LOG_ERR, "wxengine: The archive interval in the configuration file (%d)"\
+                                      " does not match the station hardware interval (%d)." % \
+                                      (software_archive_interval, self.engine.console.archive_interval))
+                    self.archive_interval = self.engine.console.archive_interval
+            except NotImplementedError:
+                self.archive_interval = software_archive_interval
+        else:
+            self.archive_interval = sofware_archive_interval
+        syslog.syslog(syslog.LOG_INFO, "wxengine: Using archive interval of %d" % self.archive_interval)
+
+        self.archive_delay = config_dict['StdArchive'].as_int('archive_delay')
+        if self.archive_delay <= 0:
+            raise weewx.ViolatedPrecondition("Archive delay (%.1f) must be greater than zero." % (self.archive_delay,))
+
+        # Get whether to use LOOP data in the high/low statistics (or just
+        # archive data):
         self.loop_hilo = weeutil.weeutil.tobool(config_dict['StdArchive'].get('loop_hilo', True))
         syslog.syslog(syslog.LOG_DEBUG, "wxengine: Use LOOP data in hi/low calculations: %d" % self.loop_hilo)
         
